Show IVs in the breeding results tree.
For bred pals, assume they get the best stat from each parent.
For composite pals, show the IVs for the one with the largest sum.

--- a/PalCalc.UI/View/BreedingResultView.xaml
+++ b/PalCalc.UI/View/BreedingResultView.xaml
@@ -29,6 +29,7 @@
                     <StackPanel Orientation="Vertical">
                         <TextBlock Text="{Binding Pal.Name.Value}" />
                         <TextBlock Text="{Binding Gender.Value}" FontSize="10" />
+                        <TextBlock Text="{Binding IVs}" FontSize="8" />
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontSize="10" Visibility="{Binding AvgRequiredAttemptsVisibility}">
                                 <Run Text="{Binding AvgRequiredAttemptsDescription.Value, Mode=OneWay}" />
